--- a/app/assets/stylesheets/textbooks.scss
+++ b/app/assets/stylesheets/textbooks.scss
@@ -40,35 +40,42 @@
   }
 }
 
-.textbook-page-listing {
-  // align-self: center;
-  table-layout: fixed;
-  border-collapse: collapse;
-
-  thead th:nth-child(1) {
-    width: 3rem;
-  }
-
-  thead th:nth-child(2) {
-    width: 60%;
-  }
-
-  td {
-    padding: 0.4rem 0.2rem;
-  }
-
-  tbody td:nth-child(1) {
-    text-align: center;
-    font-weight: 500;
-  }
-  
-  tr:nth-child(even) {
-    background: $ru200;
-  }
-
+.textbook-page-list {
+  list-style: none;
   p {
+    line-height: 1.2rem;
     margin: 0;
   }
+}
+
+.textbook-page-list > li:nth-child(even) {
+  background: $ru200;
+}
+
+.textbook-page {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0.2rem 0;
+}
+
+.page-number {
+  font-weight: 500;
+  min-width: 2.5rem;
+  text-align: center;
+  flex: 1;
+}
+
+.page-description {
+  flex: 9;
+}
+
+.page-tags {
+  flex: 4;
+}
+
+.textbook-page-controls {
+  flex: 2;
 }
 
 .combined-search-link {
@@ -104,9 +111,7 @@
     justify-content: space-around;
   }
 
-  .textbook-page-listing {
-    td {
-      padding: 0.2rem;
-    }
+  .page-number {
+    font-size: 1.1rem;
   }
 }
