--- a/app/views/activities/_activity.html.haml
+++ b/app/views/activities/_activity.html.haml
@@ -24,8 +24,8 @@
       - if @page_links.any?
         %p Intended for:
         - @page_links.each do |page_link|
-          %p
-            %span= link_to "#{page_link.textbook_page.textbook.name} page #{page_link.textbook_page.page}", page_link.textbook_page, class: "textbook-link"
+          %ul
+            %li= link_to "#{page_link.textbook_page.textbook.name} page #{page_link.textbook_page.page}", page_link.textbook_page, class: "textbook-page-link"
             - if user_signed_in? && policy(activity).edit?
               %small= link_to "(Remove link)", page_link, method: :delete, data: { confirm: "Remove the link to this page?" }
     .full-activity-description
