Remove survey link from front page

--- a/app/views/site_pages/_tag_of_the_moment.html.haml
+++ b/app/views/site_pages/_tag_of_the_moment.html.haml
@@ -1,4 +1,4 @@
 .callout
-  %p.card-title It's a new school year!
-  %p.card-text Introducing yourself to the students?
-  = link_to "The Self-Introduction tag", tag_path(102), class: "card-tag-link"
+  %p.card-title On the hunt for an activity?
+  %p.card-text Check out the main tag list!
+  = link_to "All of the tags on the site", tags_path, class: "card-tag-link"
