--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -20,11 +20,7 @@
             %p.read-more-link= t('.read-more')
       %p.fp-post-index-link= link_to t('.front-page-posts-index'), front_page_posts_path
   .fp-callouts
-    .callout
-      %p.card-title Please take the June survey!
-      %p We're requesting feedback on the site and your ideas for what to work on next.
-      %p= link_to "Fill out the anonymous survey here!", "https://forms.gle/FqUhmYBXZZhzyXKC9"
-    -# = render "tag_of_the_moment"
+    = render "tag_of_the_moment"
     - if user_signed_in?
       .fp-user-card
         = render partial: "users/avatar", locals: { user: current_user, size: "70"}
