--- a/app/views/tag_searches/new.html.haml
+++ b/app/views/tag_searches/new.html.haml
@@ -14,6 +14,6 @@
 
   %p Do you need to find an activity to fit your requirements? Choose the tags that fit what you need. Keep in mind that this will specifically find activities that contain ALL of the tags you pick.
 
-  %p You might not want to bookmark the search result page, since the URL could change in the future.
+  = render 'show'
 
   = render 'new'
