--- a/app/views/tag_searches/_show.html.haml
+++ b/app/views/tag_searches/_show.html.haml
@@ -1,7 +1,7 @@
 %h3.tag-search-results.hide.hide-title Matching activities
 %h5.sort-title.hide.hide-title Sort by
 %div.sorting-buttons
-%ul.activity-card-list
+%ul.activity-card-list.fit
 %div.pagination-buttons
 %h5 Narrow results by tag
 %div.narrow-tags
