--- a/app/views/tag_searches/new.html.haml
+++ b/app/views/tag_searches/new.html.haml
@@ -12,7 +12,7 @@
 
   %h3 Find activities by tags
 
-  %p Do you need to find an activity to fit your requirements? Choose the tags that fit what you need. Keep in mind that this will specifically find activities that contain ALL of the tags you pick.
+  %p.fit Do you need to find an activity to fit your requirements? Choose the tags that fit what you need. Keep in mind that this will specifically find activities that contain ALL of the tags you pick.
 
   = render 'show'
 
