narrow tags sorted based on frequency, styling

--- a/app/assets/stylesheets/tag_searches.scss
+++ b/app/assets/stylesheets/tag_searches.scss
@@ -139,6 +139,10 @@ p.warning {
     width: 100%;
 }
 
+.narrow-tags {
+    margin-bottom: 10px;
+}
+
 .pagination-buttons button {
     margin: 10px;
     text-align: center;
